FILE(GLOB brd_files "*.brd")
FILE(GLOB equ_files "*.equ")
FILE(GLOB mdc_files "*.mdc")
FILE(GLOB mod_files "*.mod")

INSTALL(FILES ${brd_files} DESTINATION ${KICAD_MODULES})
INSTALL(FILES ${equ_files} DESTINATION ${KICAD_MODULES})
INSTALL(FILES ${mdc_files} DESTINATION ${KICAD_MODULES})
INSTALL(FILES ${mod_files} DESTINATION ${KICAD_MODULES})

INSTALL(DIRECTORY packages3d DESTINATION ${KICAD_MODULES}
	PATTERN ".svn" EXCLUDE)
